# ridl

./: .gitignore  CMakeLists.txt  COPYING.rst  Makefile  README  README.md  README.rst  RELEASE  cleanconf  cleanconf.sh  doxygen.config  example_configure  example_configure.sh  homebrew_configure.sh  idlhelp2txt.py  install_ridl.sh  linux_configure.sh  make_docs.sh  mg_configure  overview  project.config  ridl  ridl.sh  ridl.sh.in  ridl_build_docs.pro  ridl_make_appdir.pro
CMake/: GetDate.cmake
CMake/Modules/: FindIDL.cmake  FindReadline.cmake
docs/: .gitignore  Makefile  manual.rst  manual.txt  mgalloy.sty  ridl.rst  ridl_manual.rst
project/: idl_routines.txt  required-features.txt  ridl_build_routinecatalog.pro  screencast.txt  undocumented-routines.txt
project/screencasts/: bridge-cl-to-files.txt  minimize-typing.txt
src/: .gitignore  CMakeLists.txt  Makefile  callable_test.c  example_prefs.ini  idl_classes.txt  idl_routines.txt  idl_undocumented.h  inputrc  ridl.c  ridl.h  ridl.sh  ridl_class_hierarchy.pro  ridl_cmp_version.pro  ridl_completion.c  ridl_completion.h  ridl_config.h.in  ridl_getevents.pro  ridl_getfields.pro  ridl_getmethods.pro  ridl_getroutines.pro  ridl_getuserroutines.pro  ridl_history.c  ridl_history.h  ridl_idlpreferences.c  ridl_idlversion.pro  ridl_launcheditor.pro  ridl_logging.c  ridl_logging.h  ridl_magic.c  ridl_magic.h  ridl_preferences.c  ridl_preferences.h  ridl_preflocation.pro  ridl_printsource.pro  ridl_savegraphic.pro  ridl_strings.c  ridl_strings.h  ridl_varhelp.pro  ridl_verbosehelp.txt
test/: mg_shebang_test.pro  ridl_stoptest.pro
